test_suite/tests/ui/float/visibility/inner_field.rs
use nutype::nutype;

#[nutype]
struct Distance(pub f32);

fn main() {}
